hphp/hack/test/typecheck/nonnull/accessing_type_constant_of_nonnull.php.exp
File "accessing_type_constant_of_nonnull.php", line 5, characters 15-15:
You are trying to access the property 'C' but this is a nonnull value (Typing[4062])
File "accessing_type_constant_of_nonnull.php", line 5, characters 12-12:
Definition is here
